Bug 1642290: stop the process preallocator during normal shutdown, not post-CC r=nika

Post-CC is no longer needed given the landing of bug 1642491

Differential Revision: https://phabricator.services.mozilla.com/D79017